create, read & update (banner)

--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -2702,9 +2702,9 @@ thead tr th {
   color: #373757;
   font-weight: 500;
 }
-thead tr th:last-child {
+/* thead tr th:last-child {
   text-align: right;
-}
+} */
 tbody tr th {
   color: #373757;
   font-family: 'Roboto', sans-serif;
@@ -2714,9 +2714,9 @@ tbody tr td {
   font-family: 'Roboto', sans-serif;
   color: #868e96;
 }
-tbody tr td:last-child {
+/* tbody tr td:last-child {
   text-align: right;
-}
+} */
 .table > tbody > tr > td,
 .table > tbody > tr > th,
 .table > tfoot > tr > td,
